--- a/ConversorMoedas/app/src/main/res/layout/activity_main.xml
+++ b/ConversorMoedas/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:text="@string/txt_ValorReal" />
 
     <EditText
-        android:id="@+id/edit_valor"
+        android:id="@+id/edit_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="" />
@@ -24,13 +24,13 @@
         android:text="@string/valor_em_dolar" />
 
     <TextView
-        android:id="@+id/txt_dolar"
+        android:id="@+id/text_dolar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/valor_em_dolar" />
 
     <TextView
-        android:id="@+id/txt_euro"
+        android:id="@+id/text_euro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/valor_em_euro" />
