--- a/BarberShop/app/src/main/res/layout/activity_main.xml
+++ b/BarberShop/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:text="@string/agenda" />
+        android:text="@string/agenda"
+        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/btn_cad_func"
