--- a/BarberShop/app/src/main/res/layout/activity_form_empl.xml
+++ b/BarberShop/app/src/main/res/layout/activity_form_empl.xml
@@ -39,7 +39,7 @@
         app:layout_constraintVertical_bias="0.399" />
 
     <EditText
-        android:id="@+id/txt_empl"
+        android:id="@+id/etNomeFunc"
         android:layout_width="176dp"
         android:layout_height="42dp"
         android:ems="10"
