--- a/BarberShop/app/src/main/res/values-night/themes.xml
+++ b/BarberShop/app/src/main/res/values-night/themes.xml
@@ -7,6 +7,6 @@
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant"@color/teal_700</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
     </style>
 </resources>
