--- a/BarberShop/app/src/main/res/layout/activity_form_sched.xml
+++ b/BarberShop/app/src/main/res/layout/activity_form_sched.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="256dp"
-        android:layout_height="259dp"
-        android:background="@color/white"
+        android:layout_width="250dp"
+        android:layout_height="243dp"
+        android:background="@color/black"
         android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         app:layout_constraintVertical_bias="0.425" />
 
     <EditText
-        android:id="@+id/txtname"
+        android:id="@+id/txtnameCust"
         android:layout_width="233dp"
         android:layout_height="45dp"
         android:ems="10"
@@ -104,7 +104,7 @@
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
-        android:id="@+id/btn_salvar_funcionario"
+        android:id="@+id/btn_salvar_Agenda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/btn"
