--- a/BarberShop/app/src/main/res/layout/activity_form_empl.xml
+++ b/BarberShop/app/src/main/res/layout/activity_form_empl.xml
@@ -23,11 +23,11 @@
 
     <TextView
         android:id="@+id/txt_center"
+        android:layout_width="176dp"
+        android:layout_height="55dp"
         android:background="@color/brown"
-        android:layout_width="206dp"
-        android:layout_height="45dp"
         android:ems="10"
-        android:text="Register Employee"
+        android:text="Registrar Funcionario"
         android:textAlignment="center"
         android:textColor="#FFFF"
         android:textSize="22sp"
@@ -46,6 +46,7 @@
         android:hint="@string/nome_funcionario"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textColor="#FFFEFE"
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
