--- a/BarberShop/app/src/main/res/layout/activity_list_employee.xml
+++ b/BarberShop/app/src/main/res/layout/activity_list_employee.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#121010"
+    android:background="#FFFFFF"
     tools:context=".ListEmplActivity">
 
     <com.google.android.material.appbar.AppBarLayout
