--- a/BarberShop/app/src/main/res/layout/activity_main.xml
+++ b/BarberShop/app/src/main/res/layout/activity_main.xml
@@ -28,15 +28,9 @@
     <Button
         android:id="@+id/btn_cad_func"
         android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/registar_funcionario" />
-
-    <pl.droidsonroids.gif.GifImageView
-        android:layout_width="90dp"
-        android:layout_height="260dp"
-        android:src="@drawable/primary_gif"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:text="Registrar Funcionario" />
 
 
 </LinearLayout>
