Creation of the bank for customers and visual modifications.

--- a/BarberShop/app/src/main/res/layout/activity_form_empl.xml
+++ b/BarberShop/app/src/main/res/layout/activity_form_empl.xml
@@ -27,7 +27,7 @@
         android:layout_height="55dp"
         android:background="@color/brown"
         android:ems="10"
-        android:text="Registrar Funcionario"
+        android:text="@string/registar_funcionario"
         android:textAlignment="center"
         android:textColor="#FFFF"
         android:textSize="22sp"
