Bank and others

--- a/BarberShop/app/src/main/res/layout/activity_list_schedule.xml
+++ b/BarberShop/app/src/main/res/layout/activity_list_schedule.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#121010"
+    android:background="#FFFFFF"
     tools:context=".ListScheduleActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -16,7 +16,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
-        layout="@layout/content_activity_list_employee"
+        layout="@layout/content_activity_list_schedule"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
