--- a/BarberShop/app/src/main/res/layout/activity_form_empl.xml
+++ b/BarberShop/app/src/main/res/layout/activity_form_empl.xml
@@ -27,7 +27,7 @@
         android:layout_height="55dp"
         android:background="@color/brown"
         android:ems="10"
-        android:text="@string/registar_funcionario"
+        android:text="Registrar Funcionario"
         android:textAlignment="center"
         android:textColor="#FFFF"
         android:textSize="22sp"
@@ -43,7 +43,7 @@
         android:layout_width="176dp"
         android:layout_height="42dp"
         android:ems="10"
-        android:hint="@string/nome_funcionario"
+        android:hint="Nome"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="#FFFEFE"
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/btn"
-        android:text="@string/salvar"
+        android:text="Salvar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
