--- a/BarberShop/app/src/main/res/layout/activity_form_sched.xml
+++ b/BarberShop/app/src/main/res/layout/activity_form_sched.xml
@@ -47,28 +47,13 @@
         android:hint="Nome do cliente"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textColorHint="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.615"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <EditText
-        android:id="@+id/lv_barbeiros"
-        android:layout_width="233dp"
-        android:layout_height="45dp"
-        android:ems="10"
-        android:hint="Lista de barbeiros"
-        android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:textColorHint="#FFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.516"
+        app:layout_constraintVertical_bias="0.526"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
@@ -79,12 +64,13 @@
         android:hint="Horario"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textColorHint="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.814"
+        app:layout_constraintVertical_bias="0.758"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
@@ -95,12 +81,13 @@
         android:hint="Data"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textColorHint="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.709"
+        app:layout_constraintVertical_bias="0.632"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
@@ -108,12 +95,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/btn"
-        android:text="@string/salvar"
+        android:text="Salvar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.938"
+        app:layout_constraintVertical_bias="0.871"
         tools:ignore="TextContrastCheck" />
 
 
