--- a/BarberShop/app/src/main/res/layout/activity_main.xml
+++ b/BarberShop/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:text="@string/agenda"
+        android:text="Agenda"
         tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
     <Button
