--- a/BarberShop/app/src/main/res/layout/activity_form_empl.xml
+++ b/BarberShop/app/src/main/res/layout/activity_form_empl.xml
@@ -5,14 +5,14 @@
     android:id="@+id/descr"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/brown"
+    android:background="@color/black"
     tools:context=".FormEmplActivity">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="187dp"
         android:layout_height="166dp"
-        android:background="@color/white"
+        android:background="@color/black"
         android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,6 @@
         android:id="@+id/txt_center"
         android:layout_width="176dp"
         android:layout_height="55dp"
-        android:background="@color/brown"
         android:ems="10"
         android:text="Registrar Funcionario"
         android:textAlignment="center"
