--- a/BarberShop/app/src/main/res/layout/activity_form_sched.xml
+++ b/BarberShop/app/src/main/res/layout/activity_form_sched.xml
@@ -5,7 +5,8 @@
     android:id="@+id/descr"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/brown"
+    android:background="@color/black"
+    android:foregroundTint="#FFFEFE"
     tools:context=".FormScheduleActivity">
 
     <ImageView
@@ -24,9 +25,9 @@
 
     <TextView
         android:id="@+id/txt_center"
-        android:layout_width="254dp"
-        android:layout_height="29dp"
-        android:background="@color/brown"
+        android:layout_width="210dp"
+        android:layout_height="39dp"
+        android:background="@color/black"
         android:ems="10"
         android:text="AGENDAMENTO"
         android:textAlignment="center"
@@ -34,52 +35,54 @@
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.425" />
+        app:layout_constraintVertical_bias="0.409" />
 
     <EditText
         android:id="@+id/txtnameCust"
-        android:layout_width="233dp"
-        android:layout_height="45dp"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
         android:ems="10"
         android:hint="Nome do cliente"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFF"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.526"
+        app:layout_constraintVertical_bias="0.593"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/txt_horario"
-        android:layout_width="233dp"
-        android:layout_height="45dp"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
         android:ems="10"
         android:hint="Horario"
-        android:inputType="textPersonName"
+        android:inputType="datetime"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:padding="1dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.758"
+        app:layout_constraintVertical_bias="0.77"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/txtData"
-        android:layout_width="233dp"
-        android:layout_height="45dp"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
         android:ems="10"
         android:hint="Data"
-        android:inputType="textPersonName"
+        android:inputType="date"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFF"
@@ -87,7 +90,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.632"
+        app:layout_constraintVertical_bias="0.679"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
@@ -103,5 +106,15 @@
         app:layout_constraintVertical_bias="0.871"
         tools:ignore="TextContrastCheck" />
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#DAE4DA"
+        android:textDirection="ltr"
+        app:layout_constraintBottom_toTopOf="@+id/txtnameCust"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_center" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
