--- a/BarberShop/app/src/main/res/layout/activity_main.xml
+++ b/BarberShop/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="8dp"
-    android:background="#121010"
+    android:background="@color/black"
     android:orientation="vertical"
     tools:context=".MainActivity"
     tools:ignore="ExtraText">
