--- a/BarberShop/app/src/main/res/layout/content_activity_list_employee.xml
+++ b/BarberShop/app/src/main/res/layout/content_activity_list_employee.xml
@@ -12,6 +12,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         android:id="@+id/lvFuncionarios"></ListView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
