--- a/BarberShop/app/src/main/res/values/colors.xml
+++ b/BarberShop/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="brown">#121010</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="green">#388E3C</color>
+    <color name="red">#D32F2F</color>
 </resources>
